--- a/OurNewProject/Views/Home/Gallery.cshtml
+++ b/OurNewProject/Views/Home/Gallery.cshtml
@@ -36,37 +36,58 @@
                 <img src="https://cdn.vox-cdn.com/thumbor/wqsO3IikVEnMW3dcTxoOdhGuhwM=/0x0:2048x1059/1200x800/filters:focal(861x367:1187x693)/cdn.vox-cdn.com/uploads/chorus_image/image/67035922/106423518_2945554885494410_3166613949933920201_o.0.jpg" alt="Lights" style="width:100%">
             </a>
         </div>
-    </div><br>
+        <div class="w3-row-padding">
+            <div class="w3-col s3 w3-container">
+                <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('Aima');">
+                    <img src="https://usa.fage/sites/usa.fage/files/recipes/hero/Fage_Recipe_Headers_1200x500_0018_Fage_Oct19_Plain_Simple_Alt3_1575_RTF%20copy.jpg" alt="Nature" style="width:100%">
+                </a>
+            </div>
+        </div><br>
 
-    <div id="Nature" class="picture w3-display-container" style="display:none">
-        <img src="https://www.barry-callebaut.com/sites/default/files/styles/paragraph_text_and_image_left_right/public/2019-07/icecream-loadedindulgences.png?itok=ZA-9SpzO" alt="Nature" style="width:100%">
-        <span onclick="this.parentElement.style.display='none'"
-              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">הגלידות החדשות שלנו עכשיו גם בכוסות</div>
-    </div>
 
-    <div id="Snow" class="picture w3-display-container" style="display:none">
-        <img src="https://www.foodnetwork.com/content/dam/images/food/video/0/03/030/0303/0303503.jpg" alt="Snow" style="width:100%">
-        <span onclick="this.parentElement.style.display='none'"
-              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">גלידות הוניל במגוון תוספות</div>
-    </div>
 
-    <div id="Mountains" class="picture w3-display-container" style="display:none">
-        <img src="https://i.guim.co.uk/img/static/sys-images/Guardian/Pix/pictures/2015/8/30/1440958763375/7c34a82f-444d-4270-91a5-41b836c46595-2060x1236.jpeg?width=445&quality=45&auto=format&fit=max&dpr=2&s=e130afe3482279b49464697385445f36" alt="Mountains" style="width:100%">
-        <span onclick="this.parentElement.style.display='none'"
-              class="w3-display-topright w3-button w3-transparent">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">הקלאסיות בגביע</div>
-    </div>
 
-    <div id="Lights" class="picture w3-display-container" style="display:none">
-        <img src="https://cdn.vox-cdn.com/thumbor/wqsO3IikVEnMW3dcTxoOdhGuhwM=/0x0:2048x1059/1200x800/filters:focal(861x367:1187x693)/cdn.vox-cdn.com/uploads/chorus_image/image/67035922/106423518_2945554885494410_3166613949933920201_o.0.jpg" alt="Lights" style="width:100%">
-        <span onclick="this.parentElement.style.display='none'"
-              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">המהדורה הורודה</div>
-    </div>
 
-    <script src="~/js/Gallery.js"></script>
+
+
+
+
+        <div id="Nature" class="picture w3-display-container" style="display:none">
+            <img src="https://www.barry-callebaut.com/sites/default/files/styles/paragraph_text_and_image_left_right/public/2019-07/icecream-loadedindulgences.png?itok=ZA-9SpzO" alt="Nature" style="width:100%">
+            <span onclick="this.parentElement.style.display='none'"
+                  class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+            <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">הגלידות החדשות שלנו עכשיו גם בכוסות</div>
+        </div>
+
+        <div id="Snow" class="picture w3-display-container" style="display:none">
+            <img src="https://www.foodnetwork.com/content/dam/images/food/video/0/03/030/0303/0303503.jpg" alt="Snow" style="width:100%">
+            <span onclick="this.parentElement.style.display='none'"
+                  class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+            <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">גלידות הוניל במגוון תוספות</div>
+        </div>
+
+        <div id="Mountains" class="picture w3-display-container" style="display:none">
+            <img src="https://i.guim.co.uk/img/static/sys-images/Guardian/Pix/pictures/2015/8/30/1440958763375/7c34a82f-444d-4270-91a5-41b836c46595-2060x1236.jpeg?width=445&quality=45&auto=format&fit=max&dpr=2&s=e130afe3482279b49464697385445f36" alt="Mountains" style="width:100%">
+            <span onclick="this.parentElement.style.display='none'"
+                  class="w3-display-topright w3-button w3-transparent">&times;</span>
+            <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">הקלאסיות בגביע</div>
+        </div>
+
+        <div id="Lights" class="picture w3-display-container" style="display:none">
+            <img src="https://cdn.vox-cdn.com/thumbor/wqsO3IikVEnMW3dcTxoOdhGuhwM=/0x0:2048x1059/1200x800/filters:focal(861x367:1187x693)/cdn.vox-cdn.com/uploads/chorus_image/image/67035922/106423518_2945554885494410_3166613949933920201_o.0.jpg" alt="Lights" style="width:100%">
+            <span onclick="this.parentElement.style.display='none'"
+                  class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+            <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">המהדורה הורודה</div>
+        </div>
+
+        <div id="Aima" class="picture w3-display-container" style="display:none">
+            <img src="https://usa.fage/sites/usa.fage/files/recipes/hero/Fage_Recipe_Headers_1200x500_0018_Fage_Oct19_Plain_Simple_Alt3_1575_RTF%20copy.jpg" alt="Lights" style="width:100%">
+            <span onclick="this.parentElement.style.display='none'"
+                  class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+            <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
+        </div>
+
+        <script src="~/js/Gallery.js"></script>
 
 </body>
 </html>
