--- a/OurNewProject/Views/Home/Hyadata.cshtml
+++ b/OurNewProject/Views/Home/Hyadata.cshtml
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="card">
                 <div class="card-header">
-                    <img src="https://www.colbonews.co.il/wp-content/uploads/2018/09/c275d1d8cc344914602ce4aee6213e2b-e1536750971623.jpg" alt="rover" />
+                    <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/226864359_754623895272022_7310758689881530843_n.png?_nc_cat=104&ccb=1-3&_nc_sid=730e14&_nc_ohc=DYiZqtE_J-0AX9eoeD4&_nc_ht=scontent.ftlv6-1.fna&oh=d3d21cef9c8ca678161295768a76d477&oe=6108E11A" alt="rover" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-teal">
@@ -78,7 +78,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://glidatstrauss.co.il/wp-content/uploads/2019/01/Main_1920x505.png" alt="city" />
+                    <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/226836191_754623961938682_7373053499286711741_n.png?_nc_cat=105&ccb=1-3&_nc_sid=730e14&_nc_ohc=RNUs1fZevEEAX9KygqV&_nc_ht=scontent.ftlv6-1.fna&oh=808881db7eeda26e4c0ee3728b38cf23&oe=6108BC0F" alt="city" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-pink">
@@ -94,7 +94,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://glidatstrauss.co.il/wp-content/uploads/2019/01/Main_1920x505.png" alt="city" />
+                    <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/227103351_754623901938688_4489645589254305236_n.png?_nc_cat=111&ccb=1-3&_nc_sid=730e14&_nc_ohc=l4I78R5J6aUAX-HC8P9&_nc_ht=scontent.ftlv6-1.fna&oh=5f90f3b430993616dcfba7d97c4bb7b6&oe=610889BE" alt="city" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-pink">
@@ -136,7 +136,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <img src="https://glidatstrauss.co.il/wp-content/uploads/2019/01/Main_1920x505.png" alt="city" />
+                    <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/226788526_754623908605354_2388674748591718896_n.png?_nc_cat=108&ccb=1-3&_nc_sid=730e14&_nc_ohc=Ezab363Vp8IAX8qn3sx&tn=BACNfLudBkk3VGcy&_nc_ht=scontent.ftlv6-1.fna&oh=4e192ad4ca76d2fa977a6585b1e78696&oe=6108AB71" alt="city" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-pink">
@@ -151,7 +151,7 @@
             </div>
 
 
-            <div class="card">
+            @*<div class="card">
                 <div class="card-header">
                     <img src="https://prod-wolt-venue-images-cdn.wolt.com/5f43ac125060d8157b9a3c1f/019a6748-f68b-11ea-9984-1e09a232bab7_menu_2.jpg" alt="ballons" />
                 </div>
@@ -189,7 +189,7 @@
                     <h4> טועמי גלידה טועמים את הגלידה בעזרת כפית מזהב, כדי שלא ירגישו שום סוג של טעם לוואי שעלול להיות בכפית רגילה.</h4>
 
                 </div>
-            </div>
+            </div>*@
 
         </div>
     </div>
