--- a/OurNewProject/Views/Users/Statistics.cshtml
+++ b/OurNewProject/Views/Users/Statistics.cshtml
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="~/css/reservation.css" />
     <script src="~/js/reservation.js"></script>
     <link rel="stylesheet" href="~/css/gallery.css">
-    <link rel="stylesheet" href="~/css/about.css">
+    <link rel="stylesheet" href="~/css/About.css">
+
 </head>
 
 <br />
